venues page overflow fix

--- a/venues.css
+++ b/venues.css
@@ -3,10 +3,12 @@ body {
     background-color: rgb(255, 227, 192);
     width: 100%;
     height: 100%;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     overflow-y: scroll;
     text-decoration: none;
 }
+
+
 
 
 .links .active {
